--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,21 @@ jobs:
         os: [windows-latest, ubuntu-latest, macos-latest]
         qt-version: [5.15.2, 5.12.10]
         build-system: [qmake, cmake]
+        pch: [true]
         exclude:
           - os: windows-latest
             qt-version: 5.12.10
             build-system: cmake
+            pch: true
         include:
           - os: windows-2016
             qt-version: 5.12.10
             build-system: cmake
+            pch: true
+          - os: ubuntu-latest
+            qt-version: 5.15.2
+            build-system: cmake
+            pch: false
       fail-fast: false
 
     steps:
@@ -158,7 +165,12 @@ jobs:
         run: |
             mkdir build
             cd build
-            cmake -DCMAKE_INSTALL_PREFIX=appdir/usr/ -DCMAKE_BUILD_TYPE=Release -DPAJLADA_SETTINGS_USE_BOOST_FILESYSTEM=On ..
+            cmake \
+              -DCMAKE_INSTALL_PREFIX=appdir/usr/ \
+              -DCMAKE_BUILD_TYPE=Release \
+              -DPAJLADA_SETTINGS_USE_BOOST_FILESYSTEM=On \
+              -DUSE_PRECOMPILED_HEADERS=${{ matrix.pch }} \
+              ..
             make -j8
         shell: bash
 
@@ -214,6 +226,7 @@ jobs:
             cmake \
                 -DCMAKE_BUILD_TYPE=Release \
                 -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl \
+                -DUSE_PRECOMPILED_HEADERS=${{ matrix.pch }} \
                 ..
             make -j8
         shell: bash
