Add files to CMakeLists.txt, set pronouns as disabled by default, stop requests when pronouns are disabled

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -195,6 +195,9 @@ set(SOURCE_FILES
         providers/irc/IrcServer.cpp
         providers/irc/IrcServer.hpp
 
+        providers/pronouns/PronounsBadges.cpp
+        providers/pronouns/PronounsBadges.hpp
+
         providers/twitch/ChannelPointReward.cpp
         providers/twitch/ChannelPointReward.hpp
         providers/twitch/IrcMessageHandler.cpp
